Implemented most of API tests and configured other classes accordingly